--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-icon": "^1.0.0",
+    "react-icons": "^5.4.0",
     "recharts": "^2.14.1",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
