--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chartjs-adapter-date-fns": "^3.0.0",
     "chartjs-chart-financial": "^0.2.1",
     "dotenv": "^16.4.5",
+    "lucide-react": "^0.469.0",
     "mongodb": "^6.11.0",
     "mongoose": "^8.8.3",
     "next": "15.0.3",
